--- a/Stravatar/en.lproj/Localizable.strings
+++ b/Stravatar/en.lproj/Localizable.strings
@@ -9,6 +9,17 @@
 "skills_hud_title" = "Skills";
 "player_heartrate_zones_title" = "Heartrate Zones";
 "player_heartrate_zones_description" = "Train in this heartrate zones to increase your skills";
-"profile_title" = "Profile";
+"strava_profile_name" = "Strava Profile";
 "activities_title" = "Latest Activities";
+
+//Avatar Info
+"avatar_info_title" = "Character info";
+"avatar_info_name" = "Name";
+"avatar_info_age" = "Age";
+
+//Avatar Creation
+"avatar_creation_name_input_title" = "Whats your name?";
+"avatar_creation_name_input_placeholder" = "Super nice character name";
+"avatar_creation_button_title" = "Save Character";
+
 "placeholder" = "Placeholder";
