--- a/Stravatar/en.lproj/Localizable.strings
+++ b/Stravatar/en.lproj/Localizable.strings
@@ -21,9 +21,9 @@
 "avatar_info_age" = "Age";
 
 //Avatar Creation
-"avatar_creation_name_input_title" = "Whats your name?";
+"avatar_creation_name_input_title" = "Enter your Avatar name?";
 "avatar_creation_name_input_placeholder" = "Super nice character name";
-"avatar_creation_button_title" = "Save Character";
+"avatar_creation_button_title" = "Create Avatar";
 
 //Generics
 "placeholder" = "Placeholder";
